--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "framer-motion": "^12.5.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-masonry-css": "^1.0.16",
+    "react-parallax": "^3.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
